--- a/app/views/care_coordinator_dashboard/index.html.haml
+++ b/app/views/care_coordinator_dashboard/index.html.haml
@@ -9,7 +9,7 @@
       = link_to 'Log Out', logout_path
 
 %section
-  %h2 Care Coordinator Dashboard
+  %h2.underline Care Coordinator Dashboard
 
   = pie_chart({"Football" => 10, "Basketball" => 5})
 
@@ -20,5 +20,3 @@
   -#%event-map
 
   %care-coordinator
-
-
