--- a/app/views/login/index.html.haml
+++ b/app/views/login/index.html.haml
@@ -4,11 +4,12 @@
   %nav.flex
     %button Log In
 
-%section.first
-  %h2.slab Do what you can.
-  %p.note The American homeless management system is overburdened. No matter how much intelligence is put into a system to assign people to homeless shelters, if there aren't enough beds, people will be out on the street. That's why it's important to focus on the real solution to the problem: *Prevention*.
-  %p.btn
-    = link_to 'Register as an assistance provider', new_assistance_provider_path
+.wrapper
+  %section.first
+    %h2.slab Do what you can.
+    %p.note The American homeless management system is overburdened. No matter how much intelligence is put into a system to assign people to homeless shelters, if there aren't enough beds, people will be out on the street. That's why it's important to focus on the real solution to the problem: *Prevention*.
+    %p.btn
+      = link_to 'Register as an assistance provider', new_assistance_provider_path
 
 %section.second
   %h2.slab Another thing
