--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -18,6 +18,7 @@
 }
 .slab {
     font-family: 'Amaranth', sans-serif;
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.25);
 }
 .note {
     font-family: 'Nothing You Could Do', cursive;
@@ -96,18 +97,22 @@
 }
 .btn {
     a {
-        transition: color 250ms ease-in-out,
-                    background-color 250ms ease-in-out;
-        border-radius: 0.15rem;
-        padding: 0.5rem;
-        display: inline-block;
-        border: 2px solid;
+        text-transform: capitalize;
+        transition: background-color 250ms ease-in-out;
+        box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
+        font-size: 1em;
+        border-radius: 0.25rem;
+        border: 0;
+        background-color: #083d77;
+        padding: 0.5em 1em;
         color: #fff;
         &:hover {
             background-color: lighten(#083d77, 15%);
         }
     }
 }
+
+
 .jumbo {
     padding: 1em;
     p {
@@ -126,14 +131,19 @@
     }
 }
 .tab {
+    color: #675;
     padding: 0.5em;
-    border: 1px solid #675;
+    border: 1px solid;
     border-bottom: none;
     &.active {
-        border-color: #083d77;
+        color: #083d77;
+        background-color: #fff;
     }
-    p:first-of-type {
-        margin-bottom: 0;
+    p {
+        font-weight: 400;
+        &:first-of-type {
+            margin-bottom: 0;
+        }
     }
 }
 .underline {
