--- a/app/views/assistance_provider_dashboard/reject.html.haml
+++ b/app/views/assistance_provider_dashboard/reject.html.haml
@@ -1,2 +1,3 @@
-.jumbo
-  %p Maybe next time. Thanks for your consideration.
+%section.thanks
+  .jumbo
+    %p Maybe next time. Thanks for your consideration.
