--- a/app/views/care_coordinators/create.html.haml
+++ b/app/views/care_coordinators/create.html.haml
@@ -1,3 +1,4 @@
-.jumbo
-  %p Thank for registering!
-  = link_to 'Go to the care coordinator dashboard', 'care_coordinator_dashboard#index'
+%section.thanks
+  .jumbo
+    %p Thank for registering!
+    = link_to 'Go to the care coordinator dashboard', 'care_coordinator_dashboard#index'
