better break points

--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -97,6 +97,7 @@
 }
 .btn {
     a {
+        white-space: nowrap;
         text-transform: capitalize;
         transition: background-color 250ms ease-in-out;
         box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.25);
