--- a/app/views/assistance_providers/create.html.haml
+++ b/app/views/assistance_providers/create.html.haml
@@ -1,4 +1,5 @@
 %section.thanks
   .jumbo
     %p Thank you for helping your community!
-    = link_to 'Go to your dashboard', 'assistance_provider_dashboard#index'
+    %p.btn
+      = link_to 'Go to your dashboard', 'assistance_provider_dashboard#index'
