--- a/app/views/assistance_providers/new.html.haml
+++ b/app/views/assistance_providers/new.html.haml
@@ -35,4 +35,4 @@
       = text_field_tag :max_monthly_contribution
 
     .actions
-      %button{'ng-click' => 'submit()'} Submit
+      = submit_tag 'Submit'
