--- a/app/views/care_coordinators/create.html.haml
+++ b/app/views/care_coordinators/create.html.haml
@@ -1,4 +1,5 @@
 %section.thanks
   .jumbo
     %p Thank for registering!
-    = link_to 'Go to the care coordinator dashboard', 'care_coordinator_dashboard#index'
+    %p.btn
+      = link_to 'Go to the care coordinator dashboard', 'care_coordinator_dashboard#index'
