--- a/app/views/care_coordinators/new.html.haml
+++ b/app/views/care_coordinators/new.html.haml
@@ -15,5 +15,4 @@
       = password_field_tag :password
 
     .actions
-      %button{'ng-click' => 'submit()'} Submit
-
+      = submit_tag 'Submit'
