--- a/app/assets/stylesheets/framework.scss
+++ b/app/assets/stylesheets/framework.scss
@@ -25,18 +25,25 @@ h2 {
     min-height: 70vh;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center right;
+    background-position: center;
     background-image: url("hero1.jpg");
     position: relative;
+    @media (min-width: 1100px) {
+        background-position: center right;
+    }
     section {
-        background:
-            -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255, 255, 255, .15)), to(rgba(0, 0, 0, .4))),
-            -webkit-gradient(linear, left top, right bottom, color-stop(0, rgba(255, 255, 255, 0)), color-stop(0.5, rgba(255, 255, 255, .3)), color-stop(0.501, rgba(255, 255, 255, 0)), color-stop(1, rgba(255, 255, 255, 0)));
         position: absolute;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
+        background:
+            -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255, 255, 255, .15)), to(rgba(0, 0, 0, .4)));
+        @media (min-width: 900px) {
+            background:
+                -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255, 255, 255, .15)), to(rgba(0, 0, 0, .4))),
+                -webkit-gradient(linear, left top, right bottom, color-stop(0, rgba(255, 255, 255, 0)), color-stop(0.5, rgba(255, 255, 255, .3)), color-stop(0.501, rgba(255, 255, 255, 0)), color-stop(1, rgba(255, 255, 255, 0)));
+        }
     }
 }
 section {
@@ -51,9 +58,11 @@ section {
             padding-bottom: 0.5rem;
         }
         p {
-            width: 48%;
             line-height: 1.5;
             text-shadow: 1px 1px rgba(0, 0, 0, 0.25);
+            @media (min-width: 900px) {
+                width: 48%;
+            }
         }
     }
     p {
@@ -100,7 +109,8 @@ td {
     &.actions {
     }
 }
-button {
+button,
+input[type="submit"] {
     text-transform: capitalize;
     transition: background-color 250ms ease-in-out;
     font-size: 1em;
