--- a/app/views/login/index.html.haml
+++ b/app/views/login/index.html.haml
@@ -7,11 +7,12 @@
 .wrapper
   %section.first
     %h2.slab Do what you can.
-    %p.note The American homeless management system is overburdened. No matter how much intelligence is put into a system to assign people to homeless shelters, if there aren't enough beds, people will be out on the street. That's why it's important to focus on the real solution to the problem: *Prevention*.
+    %p.note The American homeless management system is overburdened. No matter how much intelligence is put into a system to assign people to homeless shelters, if there aren't enough beds, people will be out on the street. That's why it's important to focus on the real solution to the problem:
+    %p.note *Prevention*.
     %p.btn
       = link_to 'Register as an assistance provider', new_assistance_provider_path
 
-%section.second
+%section.second.cf
   %h2.slab Another thing
   %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   %p.btn
