--- a/app/views/care_coordinators/new.html.haml
+++ b/app/views/care_coordinators/new.html.haml
@@ -1,5 +1,5 @@
 %section
-  %h2.underline New Assistance Provider
+  %h2.underline New Care Coordinator
   = form_tag(action: 'create', method: 'post') do
 
     .input-group
