--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -170,3 +170,16 @@
 .cf:after {
     clear: both;
 }
+.login {
+    z-index: 20;
+    position: absolute;
+    padding: 1rem;
+    top: 1rem;
+    right: 1rem;
+    width: 300px;
+    background: #fff;
+    .actions {
+        text-align: right;
+        margin-top: 1em;
+    }
+}
