--- a/app/assets/stylesheets/framework.scss
+++ b/app/assets/stylesheets/framework.scss
@@ -171,5 +171,6 @@ label {
     font-size: 0.8em;
 }
 .add-need {
-    padding: 0.75em 1.25em;
+    padding: 0.75rem 1.25rem;
+    margin: 1rem 0;
 }
