Fixed some minor issues with the text

--- a/app/views/assistance_provider_dashboard/pledge.html.haml
+++ b/app/views/assistance_provider_dashboard/pledge.html.haml
@@ -15,10 +15,7 @@
   Your efforts are the first line of defense in the fight against homelessness, and we couldn't do it without you!
 
 %p
-  With the support of organizations like yours we have ended
-  %b
-    XX
-  cases of homelessness in the St. Louis area since Oct 2016.
+  With the support of organizations like yours we have ended many cases of homelessness in the St. Louis area.
 
 = link_to 'Back to my dashboard', assistance_provider_dashboard_path
 
