--- a/app/views/assistance_provider_dashboard/index.html.haml
+++ b/app/views/assistance_provider_dashboard/index.html.haml
@@ -54,7 +54,7 @@
       You have helped
       %b
         = @provider.successfully_funded_needs_count
-      stay out of homelessness!
+      household stay out of homelessness!
 
   = bar_chart({"Requestable Amount" => @provider.available_monthly_contribution}, height:"200px", colors:['#08773b'], max: @provider.max_monthly_contribution)
   = bar_chart({"Your Monthly Max" => @provider.max_monthly_contribution}, height:"200px", colors:['#083d77'], max: @provider.max_monthly_contribution)
